Fixed modal position in mobile devices. Fixed very long text wrapping in initiative content-blocks.

--- a/municipalityinitiative-web/src/main/webapp/css/less-imports/blocks.less
+++ b/municipalityinitiative-web/src/main/webapp/css/less-imports/blocks.less
@@ -84,6 +84,7 @@
 
 .initiative-content-row {
     margin-bottom:2em;
+    word-wrap: break-word;
     
     .header {
         display: block;
